# bazel-python-example

./: .gitignore  BUILD  LICENSE  WORKSPACE  bazel.md  pyproject.toml  readme.md
greet_any_name/: BUILD.bazel  hello_name.py
simple_greet/: WORKSPACE  hello.py
src/: BUILD.bazel  greeting.py  hello.py
src/flask_service/: BUILD.bazel  app.py  main.py
src/greet_any_name/: BUILD.bazel  hello_name.py
src/simple_greet/: BUILD.bazel  hello.py
