[tool.poetry]
name = "bazel-python-example"
version = "0.1.0"
description = "Testing out bazel to build containers with python code"
authors = ["Simon Stavland <simon.stavland@cognite.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
